# rtstft_ctl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  cmake.sh  rt_control.jucer  rtstft_ctl.jucer  win_installer.iss
JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Resources/Factory/: grunky.rtstftpreset  slunky.rtstftpreset  tunky.rtstftpreset
Source/: RT_AudioProcessor.cpp  RT_AudioProcessor.h  RT_ProcessorBase.cpp  RT_ProcessorBase.h  RT_ProcessorEditor.cpp  RT_ProcessorEditor.h
Source/Components/: RT_AppWindow.cpp  RT_AppWindow.h  RT_Component.cpp  RT_Component.h  RT_Header.cpp  RT_Header.h  RT_MainWindow.cpp  RT_MainWindow.h
Source/Components/Interactive/: RT_FFTDisplay.cpp  RT_FFTDisplay.h  RT_FileBrowser.cpp  RT_FileBrowser.h  RT_GearButton.cpp  RT_GearButton.h  RT_InplaceComboBox.cpp  RT_InplaceComboBox.h  RT_PresetChooser.cpp  RT_PresetChooser.h  RT_ScrollableMenu.cpp  RT_ScrollableMenu.h  RT_SelectorMenu.cpp  RT_SelectorMenu.h  RT_Sliders.cpp  RT_Sliders.h  RT_ValueLinkedSelectorMenu.cpp  RT_ValueLinkedSelectorMenu.h
Source/Components/Layout/: RT_CommandLineContainer.cpp  RT_CommandLineContainer.h  RT_FFTDisplayContainer.cpp  RT_FFTDisplayContainer.h  RT_GUIControlsContainer.cpp  RT_GUIControlsContainer.h  RT_Header.cpp  RT_Header.h  RT_MainDisplay.cpp  RT_MainDisplay.h  RT_SettingsDIsplay.cpp  RT_SettingsDIsplay.h  RT_SettingsDisplay.cpp  RT_SettingsDisplay.h  RT_SpectralDisplayContainer.cpp  RT_SpectralDisplayContainer.h
Source/Components/Utility/: RT_BorderedComponent.h  RT_Component.h
Source/Components/Visual/: RT_Bordered_Container.cpp  RT_Bordered_Container.h
Source/Managers/: RT_GUIStateManager.h
Source/Managers/DSPStateManagers/: RTSTFT_Manager.cpp  RTSTFT_Manager.h  RT_ParameterDefines.h  RT_ParameterManager.cpp  RT_ParameterManager.h  RT_PropertyManager.cpp  RT_PropertyManager.h
Source/Managers/GUIManagers/: RT_LookAndFeelManager.cpp  RT_LookAndFeelManager.h  RT_StyleManager.cpp  RT_StyleManager.h
Source/Managers/GUIStateManagers/: RT_GUIStateManager.cpp  RT_GUIStateManager.h
Source/Managers/Interface/: RT_ProcessorInterface.cpp  RT_ProcessorInterface.h
Source/Managers/LookAndFeelManagement/: RT_LookAndFeelDefault.cpp  RT_LookAndFeelManagement.h  RT_LookAndFeelManager.cpp  RT_LookAndFeelManager.h
Source/Managers/OS Managers/: RT_FileManager.cpp  RT_FileManager.h
Source/Managers/OSManagers/: RT_FileManager.cpp  RT_FileManager.h
Source/Managers/StateManagers/: RT_PresetManager.cpp  RT_PresetManager.h  RT_PropertyManager.cpp  RT_PropertyManager.h  RT_StateManager.cpp  RT_StateManager.h
Source/Utilities/: RT_FileTree.cpp  RT_FileTree.h  RT_MathUtilities.h
